# sortbook_v3

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: ai_prompt.md
doc/: README.md  agents.md  ai_prompt.md  guide_utilisateur.md  reference.md  reference_technique.md  usage.md
docker/: ollama-entrypoint.sh  sqlite-init.sh
log/: n8n_response.json
patches/: AGENTS.md.patch  README.md.patch  doc_reference.md.patch  doc_usage.md.patch  src_epub_metadata.py.patch
src/: epub_metadata.py  isbn_scan.py  test_n8n_webhook.py
tests/: test_n8n_webhook.py
workflows/: n8n_workflow.json
